clangd working maybe?

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,14 +66,5 @@
         "algorithm": "cpp"
     },
     "C_Cpp.errorSquiggles": "enabled",
-    "clangd.arguments": [
-        "-I./metal-cpp",
-        " -I./metal-cpp-extensions",
-        "-fno-objc-arc",
-        "-framework Metal",
-        "-framework Foundation",
-        "-framework Cocoa",
-        "-framework CoreGraphics",
-        "-framework MetalKit"
-    ]
+    "clangd.arguments": []
 }
