first sorta-okay implementation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,7 +63,9 @@
         "concepts": "cpp",
         "numeric": "cpp",
         "random": "cpp",
-        "algorithm": "cpp"
+        "algorithm": "cpp",
+        "cassert": "cpp",
+        "charconv": "cpp"
     },
     "C_Cpp.errorSquiggles": "enabled",
     "clangd.arguments": [],
